@@ -1,6 +1,11 @@
 2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MMapArea.py
+	Fixed bug introduced with last revision.
+
+2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
 	Don't draw off-screen thoughts. It is still a bit whacky and not working for
 	scales other than 1.0.
 
